--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,4 @@
 
-
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/GameMap.GameMap
 LocalMapOptions=
@@ -10,7 +9,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/GameMap.GameMap
+GameDefaultMap=/Game/Maps/ForeEndMap.ForeEndMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Core/SGameModeBP.SGameModeBP_C
 GlobalDefaultServerGameMode=None
